
art_make( EventGeneratorBasetest
          MODULE_LIBRARIES nusimdata_SimulationBase
                           EventGeneratorBaseCRY
                           EventGeneratorBaseGENIE
                        art_Framework_Services_Optional_RandomNumberGenerator_service
			art_Framework_Services_Registry
                        ${MF_MESSAGELOGGER}
                        ${MF_UTILITIES}
                        ${FHICLCPP}
                        ${CETLIB}
                        ${LOG4CPP}
                        ${XML2}
                        ${PYTHIA6}
                        ${LHAPDF}
                        ${GALGORITHM}
                        ${GBARYONRESONANCE}
                        ${GBASE}
                        ${GBODEKYANG}
                        ${GCHARM}
                        ${GCOH}
                        ${GDFRC}
                        ${GDIS}
                        ${GCROSSSECTIONS}
                        ${GDECAY}
                        ${GELAS}
                        ${GELFF}
                        ${GHEP}
                        ${GEVGCORE}
                        ${GEVGMODULES}
                        ${GEVGDRIVERS}
                        ${GGIBUU}
                        ${GHADRONTRANSP}
                        ${GFRAGMENTATION}
                        ${GINTERACTION}
                        ${GLLEWELLYNSMITH}
                        ${GMEC}
                        ${GMESSENGER}
                        ${GNUGAMMA}
                        ${GNUE}
                        ${GNTUPLE}
                        ${GNUCLEAR}
                        ${GNUMERICAL}
                        ${GQPM}
                        ${GPDG}
                        ${GPDF}
                        ${GQEL}
                        ${GRES}
                        ${GREGISTRY}
                        ${GREINSEHGAL}
                        ${GUTILS}
                        ${GGEO}
                        ${GFLUXDRIVERS}
                        ${GMUELOSS}
                        ${GREWEIGHT}
                        ${GNUCLEONDECAY}
                        ${CRY}
                        ${ROOT_CORE}
                        ${ROOT_CINT}
                        ${ROOT_RIO}
                        ${ROOT_NET}
                        ${ROOT_HIST}
                        ${ROOT_GRAF}
                        ${ROOT_GRAF3D}
                        ${ROOT_GPAD}
                        ${ROOT_TREE}
                        ${ROOT_RINT}
                        ${ROOT_POSTSCRIPT}
                        ${ROOT_MATRIX}
                        ${ROOT_PHYSICS}
                        ${ROOT_MATHCORE}
                        ${ROOT_THREAD}
                        ${ROOT_EG}
                        ${ROOT_TREEPLAYER}
                        ${ROOT_FFTW}
                        ${ROOT_REFLEX}
                        ${ROOTSYS}/lib/libEGPythia6.so
                        ${ROOT_GUI}
                        )

install_headers()
install_fhicl()
install_source()
install(FILES README DESTINATION ${product}/${version}/source/${CURRENT_SUBDIR} )
